# storemate_report_generator

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/queries/: 1_date_cutoff.yaml  2_report_orders_daily.yaml  3_sales_breakdown.yaml  4_order_drops_pickups.yaml  5_item_drops.yaml  5_weekly_item_drops.yaml  6_customer_drops.yaml  6_weekly_customer_drops.yaml  weekly_customer_drops.yaml  weekly_item_drops.yaml  weekly_order_drops_pickups.yaml
reports/queries/: weekly_sales.example
src/storemate_report_generator/: cli.py  config.py  database.py  dbf_processor.py  reporting.py  utils.py
tests/: conftest.py  test_database.py  test_dbf_processor.py  test_reporting.py  test_utils.py
